@@ -21,6 +21,7 @@ Verilator 4.225 devel
 * Fix incorrect tristate logic (#3399) [shareefj, Vighnesh Iyer]
 * Fix segfault exporting non-existant package (#3535).
 * Fix case statement comparing string literal (#3544). [Gustav Svensk]
+* Fix --hierarchical with order-based pin connections (#3583). [Kelin9298]
 * Improve Verilation speed with --threads on large designs. [Geza Lore]
 * Rename trace rolloverSize() (#3570).
 
